--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -71,5 +71,5 @@ jobs:
         with:
           app-name: 'Needle'
           slot-name: 'Production'
-          package: /Public
+          package: Needle11/public
           
