--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -71,6 +71,5 @@ jobs:
         with:
           app-name: 'Needle'
           slot-name: 'Production'
-          package: /home/site/wwwroot
-          # Needle11/public
+          package: Needle11/public
           
