--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -31,7 +31,7 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip Needle11/public -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -65,6 +65,13 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B0AB11A784D84CF4892D7FED3F65B404 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1A8EE185BA2F4E639D56510D8932AB23 }}
 
+      - name: Configure Azure Web App to use Needle11/public
+        run: |
+          az webapp config appsettings set \
+            --name 'Needle' \
+            --resource-group 'YourResourceGroupName' \
+            --settings WEBSITE_RUN_FROM_PACKAGE=1
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -72,4 +79,3 @@ jobs:
           app-name: 'Needle'
           slot-name: 'Production'
           package: Needle11/public
-          
