--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           az webapp config appsettings set \
             --name 'Needle' \
-            --resource-group 'YourResourceGroupName' \
+            --resource-group 'Needle' \
             --settings WEBSITE_RUN_FROM_PACKAGE=1
 
       - name: 'Deploy to Azure Web App'
