--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Azure Web App - Needle
+name: Build and deploy Node.js app to Azure Web App - Needle # V2
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd Needle11
+          cd Needle11 # Ensure the directory is correct
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -43,8 +43,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
-      contents: read
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -58,15 +58,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FA3B88BBB9A946598D1A5B6D8AC65E33 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B0AB11A784D84CF4892D7FED3F65B404 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1A8EE185BA2F4E639D56510D8932AB23 }}
 
-      - name: Configure start command for static files
+      - name: Configure Azure Web App to serve static files
         run: |
           az webapp config set \
-            --name Needle \
-            --resource-group Needle \
+            --name 'Needle' \
+            --resource-group 'Needle' \
             --linux-fx-version "NODE|22-lts" \
             --startup-file "npx serve Needle11/public"
 
