--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Azure Web App - Needle # V2
+name: Build and deploy Node.js app to Azure Web App - Needle # V2 Working
 
 on:
   push:
