--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -1,4 +1,5 @@
-name: Build and deploy Node.js app to Azure Web App - Needle # V2 Working
+# V3 MongoDB connection string
+name: Build and deploy Node.js app to Azure Web App - Needle # V3 MongoDB connection string
 
 on:
   push:
@@ -62,13 +63,17 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B0AB11A784D84CF4892D7FED3F65B404 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1A8EE185BA2F4E639D56510D8932AB23 }}
 
-     # - name: Configure Azure Web App to serve static files
-     #   run: |
-     #     az webapp config set \
-     #       --name 'Needle' \
-     #       --resource-group 'Needle' \
-     #       --linux-fx-version "NODE|22-lts" \
-      #      --startup-file "npx serve Needle11/public"
+      - name: Configure Azure Web App to serve static files and set environment variables
+        run: |
+          az webapp config set \
+            --name 'Needle' \
+            --resource-group 'Needle' \
+            --linux-fx-version "NODE|22-lts" \
+            --startup-file "npx serve Needle11/public"
+          az webapp config appsettings set \
+            --name 'Needle' \
+            --resource-group 'Needle' \
+            --settings MONGO_CONNECTION_STRING=${{ secrets.MONGO_CONNECTION_STRING }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
