--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -24,6 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           cd Needle11 # Ensure the directory is correct
+          npm install mongodb
           npm install
           npm run build --if-present
           npm run test --if-present
