--- a/Needle11/package.json
+++ b/Needle11/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^8.1.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.2",
