--- a/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
+++ b/.github/workflows/html-pages-update-(2025-03-16)_needle.yml
@@ -4,7 +4,7 @@ name: Build and deploy Node.js app to Azure Web App - Needle # V3 MongoDB connec
 on:
   push:
     branches:
-      - New-JS-Files
+      - FinishedPro
   workflow_dispatch:
 
 jobs:
